# my6502

./: .gitignore  .gitignore~  Makefile.am  Makefile.in  README.md  boot  boot.sh  build_proto.py  c24p_rom.map  config.h.in  configure  configure.ac  configure.scan  files  hw_c2-4p.h  mkproto.py  rommap.map
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: address_mode.h  bus.h  debug_output.h  fifo.h  hw_c2-4p.h  hw_model.h  instruction.h  keydecode.h  protos.h  regs.h  shmem.h
instr/: ADC.c  ADC.c~  ADC_def.h  AND.c  AND_def.h  ASL.c  ASL_def.h  BCC.c  BCC_def.h  BCS.c  BCS_def.h  BEQ.c  BEQ_def.h  BIT.c  BIT_def.h  BMI.c  BMI_def.h  BNE.c  BNE_def.h  BPL.c  BPL_def.h  BRK.c  BRK_def.h  BVC.c  BVC_def.h  BVS.c  BVS_def.h  CLC.c  CLC_def.h  CLD.c  CLD_def.h  CLI.c  CLI_def.h  CLV.c  CLV_def.h  CMP.c  CMP_def.h  CPX.c  CPX_def.h  CPY.c  (+78 more)
src/: bus.c  bus.c~  debug_output.c  hw_c2-4p.c  instruction.c  main.c  shmem.c
synmon1/: OSI_kbdmap.txt  SYN600.asm  decode_char.py  gencharmap.py  readme.txt  sysrom.rom
v540/: Makefile.am  Makefile.in  configure  configure.ac  keydecode.c  main.c  shmem.c  shmem.h  test.c
v540/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
