#AUTOMAKE_OPTIONS=foreign color-tests

bin_PROGRAMS=c2_4p

c2_4p_CFLAGS=-I${top_srcdir}/include -I${top_srcdir}/instr -I${top_srcdir}/v540 -DDEBUG_LOG


c2_4p_SOURCES= \
${top_srcdir}/src/main.c				\
${top_srcdir}/include/bus.h				\
${top_srcdir}/src/bus.c					\
${top_srcdir}/src/hw_c2-4p.c			\
${top_srcdir}/include/hw_c2-4p.h		\
${top_srcdir}/include/hw_model.h		\
${top_srcdir}/include/instruction.h		\
${top_srcdir}/src/instruction.c			\
${top_srcdir}/include/address_mode.h	\
${top_srcdir}/include/debug_output.h	\
${top_srcdir}/src/debug_output.c		\
${top_srcdir}/src/shmem.c				\
${top_srcdir}/include/shmem.h			\
${top_srcdir}/instr/ADC.c				\
${top_srcdir}/instr/ADC_def.h			\
${top_srcdir}/instr/AND.c				\
${top_srcdir}/instr/AND_def.h			\
${top_srcdir}/instr/ASL.c				\
${top_srcdir}/instr/ASL_def.h			\
${top_srcdir}/instr/BCC.c				\
${top_srcdir}/instr/BCC_def.h			\
${top_srcdir}/instr/BCS.c				\
${top_srcdir}/instr/BCS_def.h			\
${top_srcdir}/instr/BEQ.c				\
${top_srcdir}/instr/BEQ_def.h			\
${top_srcdir}/instr/BIT.c				\
${top_srcdir}/instr/BIT_def.h			\
${top_srcdir}/instr/BMI.c				\
${top_srcdir}/instr/BMI_def.h			\
${top_srcdir}/instr/BNE.c				\
${top_srcdir}/instr/BNE_def.h			\
${top_srcdir}/instr/BPL.c				\
${top_srcdir}/instr/BPL_def.h			\
${top_srcdir}/instr/BRK.c				\
${top_srcdir}/instr/BRK_def.h			\
${top_srcdir}/instr/BVC.c				\
${top_srcdir}/instr/BVC_def.h			\
${top_srcdir}/instr/BVS.c				\
${top_srcdir}/instr/BVS_def.h			\
${top_srcdir}/instr/CLC.c				\
${top_srcdir}/instr/CLC_def.h			\
${top_srcdir}/instr/CLD.c				\
${top_srcdir}/instr/CLD_def.h			\
${top_srcdir}/instr/CLI.c				\
${top_srcdir}/instr/CLI_def.h			\
${top_srcdir}/instr/CLV.c				\
${top_srcdir}/instr/CLV_def.h			\
${top_srcdir}/instr/CMP.c				\
${top_srcdir}/instr/CMP_def.h			\
${top_srcdir}/instr/CPX.c				\
${top_srcdir}/instr/CPX_def.h			\
${top_srcdir}/instr/CPY.c				\
${top_srcdir}/instr/CPY_def.h			\
${top_srcdir}/instr/DCP.c				\
${top_srcdir}/instr/DCP_def.h			\
${top_srcdir}/instr/DEC.c				\
${top_srcdir}/instr/DEC_def.h			\
${top_srcdir}/instr/DEX.c				\
${top_srcdir}/instr/DEX_def.h			\
${top_srcdir}/instr/DEY.c				\
${top_srcdir}/instr/DEY_def.h			\
${top_srcdir}/instr/EOR.c				\
${top_srcdir}/instr/EOR_def.h			\
${top_srcdir}/instr/INC.c				\
${top_srcdir}/instr/INC_def.h			\
${top_srcdir}/instr/INX.c				\
${top_srcdir}/instr/INX_def.h			\
${top_srcdir}/instr/INY.c				\
${top_srcdir}/instr/INY_def.h			\
${top_srcdir}/instr/JMP.c				\
${top_srcdir}/instr/JMP_def.h			\
${top_srcdir}/instr/JSR.c				\
${top_srcdir}/instr/JSR_def.h			\
${top_srcdir}/instr/LDA.c				\
${top_srcdir}/instr/LDA_def.h			\
${top_srcdir}/instr/LDX.c				\
${top_srcdir}/instr/LDX_def.h			\
${top_srcdir}/instr/LDY.c				\
${top_srcdir}/instr/LDY_def.h			\
${top_srcdir}/instr/LSR.c				\
${top_srcdir}/instr/LSR_def.h			\
${top_srcdir}/instr/NOP.c				\
${top_srcdir}/instr/NOP_def.h			\
${top_srcdir}/instr/ORA.c				\
${top_srcdir}/instr/ORA_def.h			\
${top_srcdir}/instr/PHA.c				\
${top_srcdir}/instr/PHA_def.h			\
${top_srcdir}/instr/PHP.c				\
${top_srcdir}/instr/PHP_def.h			\
${top_srcdir}/instr/PLA.c				\
${top_srcdir}/instr/PLA_def.h			\
${top_srcdir}/instr/PLP.c				\
${top_srcdir}/instr/PLP_def.h			\
${top_srcdir}/instr/ROL.c				\
${top_srcdir}/instr/ROL_def.h			\
${top_srcdir}/instr/ROR.c				\
${top_srcdir}/instr/ROR_def.h			\
${top_srcdir}/instr/RTI.c				\
${top_srcdir}/instr/RTI_def.h			\
${top_srcdir}/instr/RTS.c				\
${top_srcdir}/instr/RTS_def.h			\
${top_srcdir}/instr/SBC.c				\
${top_srcdir}/instr/SBC_def.h			\
${top_srcdir}/instr/SEC.c				\
${top_srcdir}/instr/SEC_def.h			\
${top_srcdir}/instr/SED.c				\
${top_srcdir}/instr/SED_def.h			\
${top_srcdir}/instr/SEI.c				\
${top_srcdir}/instr/SEI_def.h			\
${top_srcdir}/instr/SHY.c				\
${top_srcdir}/instr/SHY_def.h			\
${top_srcdir}/instr/STA.c				\
${top_srcdir}/instr/STA_def.h			\
${top_srcdir}/instr/STX.c				\
${top_srcdir}/instr/STX_def.h			\
${top_srcdir}/instr/STY.c				\
${top_srcdir}/instr/STY_def.h			\
${top_srcdir}/instr/TAX.c				\
${top_srcdir}/instr/TAX_def.h			\
${top_srcdir}/instr/TAY.c				\
${top_srcdir}/instr/TAY_def.h			\
${top_srcdir}/instr/TSX.c				\
${top_srcdir}/instr/TSX_def.h			\
${top_srcdir}/instr/TXA.c				\
${top_srcdir}/instr/TXA_def.h			\
${top_srcdir}/instr/TXS.c				\
${top_srcdir}/instr/TXS_def.h			\
${top_srcdir}/instr/TYA.c				\
${top_srcdir}/instr/TYA_def.h

